Add non-daemon mode (stop when app process is gone) for UserService

--- a/demo/src/main/res/layout/main_activity.xml
+++ b/demo/src/main/res/layout/main_activity.xml
@@ -67,7 +67,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="-12dp"
             android:layout_marginTop="4dp"
-            android:text="bindUserService"
+            android:text="bindUserService (daemon=false)"
             android:textAllCaps="false"
             android:textColor="?android:colorAccent" />
 
